--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,9 @@
   border-bottom-right-radius: 5px
 }
 
+@media screen and (max-width:640px) {
+    .search-input::placeholder {
+    color: #8E5858;
+    font-size: 0.5rem;
+    }
+}
