--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,11 @@
   border-bottom-right-radius: 5px
 }
 
-
+.links:hover{
+  border-bottom: 1px solid #ffecd0;
+  padding: 5px;
+  overflow: hidden;
+}
 
 @media screen and (max-width:640px) {
     .search-input::placeholder {
