--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,11 +15,36 @@
   border-bottom-right-radius: 5px
 }
 
-.links:hover{
-  border-bottom: 1px solid #ffecd0;
-  padding: 5px;
-  overflow: hidden;
+.get-started path {
+  transition: stroke 0.3s ease;
 }
+
+.get-started:hover path {
+  stroke: #ad5b5b;
+}
+
+
+
+.links {
+  position: relative;
+}
+
+.links::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -5px;
+  left: 50%;
+  background-color: #ffecd0;
+  transition: width 0.3s ease, left 0.3s ease;
+}
+
+.links:hover::after {
+  width: 100%;
+  left: 0;
+}
+
 
 @media screen and (max-width:640px) {
     .search-input::placeholder {
