--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,27 +92,31 @@
     flex-direction: column;
     position: fixed;
     align-items: flex-start;
-    background-color: red;
+    background-color: #fff;
     width: 50%;
     height: 100vh;
     top: 0;
-    /*left: -100%;*/
+    margin-left: -1rem;
+    left: -100%;
     padding-top: 1.5rem;
     padding-left: 1.5rem;
 
 
-    z-index: 1000;
-    transition: 0.7s all;
-    -webkit-transition: 0.7s all;
-    -moz-transition: 0.7s all;
-    -ms-transition: 0.7s all;
-    -o-transition: 0.7s all;
+  z-index: 1000;
+  transition: 0.7s all;
+  -webkit-transition: 0.7s all;
+  -moz-transition: 0.7s all;
+  -ms-transition: 0.7s all;
+  -o-transition: 0.7s all;
 }
 
-.nav-menu .toggler{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-
+.nav-menu.active{
+    left: 0;
   }
+.nav-menu .toggler{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+
+}
