--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@
   height: 2px;
   bottom: -5px;
   left: 50%;
-  background-color: #ffecd0;
+  background-color: #FFDBA6;
   transition: width 0.3s ease, left 0.3s ease;
 }
 
